--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -1,10 +1,24 @@
 @model MaiVietAnhBTH2.Models.Student
 
 @{
-Viewdata["Title"] = "Delete";
+    ViewData["Title"] = "Delete";
 }
 
-<h3>Bạn có muốn xoá thông tin sinh viên</h3>
+<h3>Bạn có muốn xoá thông tin Sinh viên?</h3>
+
 <div>
-    <hr />
-    <d
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.StudentID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.StudentID)
+        </dd>
+    </dl>
+
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="StudentID">
+        <input type="submit" value="Xoá" class="btn btn-danger" /> |
+        <a class="btn btn-success" asp-action="Index">Danh sách sinh viên</a>
+    </form>
+</div>
