--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MAIVIETANHBTH2.Models.Student>
+@model IEnumerable<MaiVietAnhBTH2.Models.Student>
     <p>
        <a class="btn btn-success" asp-acction="Create">Create a new Student</a>
     </p>
@@ -6,12 +6,17 @@
 <tr>
     <th> Student ID</th>
     <th> Student Name</th>
+    <th></th>
 <tr>
     @foreach (var item in Model)
     {
         <tr>
-            <td>@Html.DisplayFor(m => item.StudentID</td>
-            <td>@Html.DisplayFor(m => item.StudentName</td>
+            <td>@Html.DisplayFor(m => item.StudentID)</td>
+            <td>@Html.DisplayFor(m => item.StudentName)</td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.StudentID">Sửa</a>
+                <a asp-action="Delete" asp-route-id="@item.StudentID">Xoá</a>    
+            </td>
         </tr>
     }    
 </table>
